Fix section toggle alignment in hierarchy mode
Before this fix the -/+ overlapped with the section number and was also
not visually centered with the section block.

Fixes #1548

--- a/core/src/main/web/app/styles/hierarchy.scss
+++ b/core/src/main/web/app/styles/hierarchy.scss
@@ -16,6 +16,14 @@
 
 .hierarchy-mode {
 
+  .section-toggle {
+    top: 3px;
+
+    + .depth-indicator {
+      margin-left: 20px;
+    }
+  }
+
   .mini-cell-stats {
     left: 104px;
   }
